# LogCrest

./: .gitignore  README.md  demo.py  helo.py  log_config.json  main.py  pyproject.toml
.agent/workflows/: publish.md
.github/workflows/: publish.yml
logcrest/: __init__.py  config.py  core.py  decorator.py  flow.py  formatters.py  handlers.py  interfaces.py  utils.py
logcrest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
logcrest/integrations/: asgi.py  fastapi.py
src/: __init__.py  log_decorator.py  log_setup.py  utils.py
tests/: test_config.py  test_configure.py  test_core.py  test_decorator.py  test_fastapi_integration.py  test_flows_handler.py  test_formatters.py  test_handler_permissions.py  test_instrument.py  test_listener_lifecycle.py  test_log_flow.py  test_log_flow_cm.py  test_security_hardening.py  test_trace_injection.py
