[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logcrest"
version = "1.0.1"
description = "A production-grade, asynchronous logging decorator for Python."
authors = [
    { name = "Snehangsu De", email = "desnehangsu@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/snehangsude/LogCrest"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["logcrest*"]
