[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logcrest"
version = "3.0.0"
description = "A production-grade, asynchronous logging decorator for Python."
authors = [
    { name = "Snehangsu De", email = "desnehangsu@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/snehangsude/LogCrest"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["logcrest*"]
